fixes styling of service icons to prevent text from overflowing table cells

--- a/cdap-ui/app/features/admin/admin.less
+++ b/cdap-ui/app/features/admin/admin.less
@@ -80,12 +80,14 @@ body.theme-cdap.state-admin {
     }
     h2:first-child { margin-top: 0; }
     .panel-default { margin-top: 18px; }
-    td > span {
+    td > span[class^="status-"] {
       display: inline-block;
       width: 10px;
       height: 10px;
       margin-right: 5px;
       .border-radius(25px);
+    }
+    td > span {
       &.status-green { background-color: @brand-success; }
       &.status-grey { background-color: @cdap-gray; }
     }
